Done Hybrid Search

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,13 @@ langchain
 langchain-community
 pypdf
 sentence_transformers
-re
 pdfminer.six
-fitz
-frontend
+PyMuPDF
 protobuf
-gcloud
 google-api-python-client
-grpc
+grpcio
 rank_bm25
 python-dotenv
 streamlit
 google-generativeai
+google.genai
